--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,14 @@
 * {
   font-size: 1.2rem;
-  margin: 20px;
   text-align: center;
 }
+
+body {
+  height: 100vh;
+  width: 100vw;
+  padding: 50px;
+}
+
 h1, p {
   color: white;
 }
@@ -22,4 +28,22 @@ button:hover {
 }
 #btncolor1:hover, #btncolor2:hover {
   font-size: 1.8rem;
+}
+
+.quotebox {
+  display: flex;
+  justify-content: center;
+  padding: 15px;
+  width: 400px;
+  height: 300px
+}
+
+.center {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  align-items: center
+
 }
